<resources>
    <string name="app_name">memorizes</string>
    <string name="action_settings">Settings</string>
    <string name="type_any_thing">Type any Thing!!</string>
    <string name="click_me">Click me</string>
    <string name="ask">ask</string>
    <string name="photo">Photo</string>
    <string name="button">Button</string>
    <string name="calculator">calculator</string>
    <string name="give_you_expression">give you expression</string>
    <string name="give_expression_or_number">give expression or number</string>
    <string name="textview">TextView</string>
    <string name="solve_it">solve it</string>
    <string name="give_your_input">give your input</string>
    <string name="give_your_string_give_your_input">give your @string/give_your_input</string>
    <string name="give_values">give values</string>
    <string name="sum">+</string>
    <string name="output">output</string>
    <string name="solve">solve</string>
    <string name="give_an_expression">Give an expression .</string>
    <string name="take_result">Take Result</string>
    <string name="search">Search?</string>
    <string name="type_to_search">Type to Search</string>
    <string name="search1">Search</string>
    <string name="filter_view_http_gizmos">filter_view_http_gizmos</string>
    <string name="filter_view_example_gizmos">filter_view_example_gizmos</string>
    <string name="know_about_us">Know about us</string>
    <string name="click_on_button">click on button</string>
    <string name="about_us">About us</string>
    <string name="clear">clear</string>
    <string name="music">music</string>
    <string name="entertainment">Entertainment</string>
    <string name="will_be_updated_soon">will be updated soon</string>
    <string name="title_activity_player">player</string>
    <string name="play">play</string>
    <string name="stop">stop</string>
    <string name="back"><![CDATA[<<]]></string>
    <string name="forw"><![CDATA[>>]]></string>
    <string name="prev"><![CDATA[|<-]]></string>
    <string name="next"><![CDATA[->|]]></string>
    <string name="music1">music</string>
    <string name="title_activity_video">video</string>
    <string name="textview1">TextView</string>
    <string name="video">video</string>
    <string name="textview2">TextView</string>
    <string name="title_activity_vplayer">vplayer</string>
    <string name="loop">loop</string>
    <string name="loop_on">loop on</string>
</resources>
